--- a/src/style/theme.less
+++ b/src/style/theme.less
@@ -16,6 +16,8 @@
 }
 
 .application-header-navigation-link {
+  font-family: 'Source Sans Pro', sans-serif;
+  font-size: 14pt;
   color: @navColor;
   text-decoration: none;
   &:hover {
