--- a/src/modules/main/style/style.less
+++ b/src/modules/main/style/style.less
@@ -59,15 +59,16 @@
 
   svg {
     width: 100%;
+    height: 90%;
     bottom: 0;
     position: fixed;
-    @media only screen and (max-height: 685px) {
-      height: 95%;
-    }
-    @media screen and (max-width: 720px) {
-      width: 100%;
-      height: auto;
-    }
+    //@media only screen and (max-height: 685px) {
+    //  height: 90%;
+    //}
+    //@media screen and (max-width: 720px) {
+    //  width: 100%;
+    //  height: auto;
+    //}
   }
 
   @media screen and (max-width: 720px) {
