fix title font, link

--- a/src/style/theme.less
+++ b/src/style/theme.less
@@ -32,7 +32,9 @@
     font-family: Fundamental Brigade, sans-serif;
     font-size: 28pt;
     color: @navColor;
-    padding-left: 100px;
+    //padding-left: 100px;
+    position: fixed;
+    left: 17%;
   }
   .application-header-navigation {
     margin-left: 50%;
