--- a/src/modules/main/style/style.less
+++ b/src/modules/main/style/style.less
@@ -65,10 +65,9 @@
     //@media only screen and (max-height: 685px) {
     //  height: 90%;
     //}
-    //@media screen and (max-width: 720px) {
-    //  width: 100%;
-    //  height: auto;
-    //}
+    @media screen and (max-width: 720px) {
+      height: auto;
+    }
   }
 
   @media screen and (max-width: 720px) {
