--- a/src/style/theme.less
+++ b/src/style/theme.less
@@ -47,13 +47,14 @@ body {
     @media screen and (max-width: 720px) {
       left: 50%;
       transform: translateX(-50%);
+      font-size: 20pt;
     }
   }
   .application-header-navigation {
     margin-left: 50%;
     margin-top: 10px;
     @media screen and (max-width: 720px) {
-      margin-top: 50px;
+      margin-top: 25px;
       margin-left: 0;
     }
     .application-header-navigation-link {
@@ -70,7 +71,7 @@ body {
         text-align: center;
         width: 100%;
         font-size: 20pt;
-        padding-top: 20px;
+        padding-top: 10px;
       }
     }
 
