--- a/src/style/theme.less
+++ b/src/style/theme.less
@@ -18,6 +18,7 @@
 @baseBackground: #53c8d3;
 @navColor: #ffffff;
 @headerHeight: 50px;
+@headerHeightMobile: 197px;
 @headerPaddingTop: 20px;
 
 @import "../modules/main/style/style";
@@ -80,4 +81,7 @@ body {
   background-color: @baseBackground;
   width: 100%;
   height: calc(~'100% - '@headerHeight + @headerPaddingTop);
+  @media screen and (max-width: 720px) {
+    height: calc(~'100% - '@headerHeightMobile);
+  }
 }
